# xmas_card_generator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: enums.py  generator.py
